Alias `dag_display_name` for `dag_stats`
