# airflow-ctl/src/airflowctl/api/datamodels/generated.py
@@ -1298,6 +1298,7 @@ class DagStatsResponse(BaseModel):
     """
 
     dag_id: Annotated[str, Field(title="Dag Id")]
+    dag_display_name: Annotated[str, Field(title="Dag Display Name")]
     stats: Annotated[list[DagStatsStateResponse], Field(title="Stats")]
 
 
